# edflib-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
edflib-sys/: Cargo.toml  README.md  build.rs
edflib-sys/edflib-src/: edflib.h
edflib-sys/edflib-src/unittest/: unittest.c
edflib-sys/src/: lib.rs
examples/: generator.rs
src/: base.rs  lib.rs  utils.rs  writer.rs
